...
import com.android.ootd.utils.composables.CommonTextField
import com.android.ootd.utils.composables.ImageSelectionDialog
import com.android.ootd.utils.composables.OOTDTopBar
import com.android.ootd.utils.composables.ShowText

object FitCheckScreenTestTags {
  const val SCREEN = "fitCheckScreen"
  const val TOP_BAR = "fitCheckTopBar"
  const val BACK_BUTTON = "fitCheckBackButton"
  const val IMAGE_PREVIEW = "fitCheckImagePreview"
  const val PLACEHOLDER_ICON = "fitCheckPlaceholderIcon"
  const val ADD_PHOTO_BUTTON = "fitCheckAddPhotoButton"
  const val ALERT_DIALOG = "fitCheckPhotoDialog"
  const val TAKE_PHOTO_BUTTON = "fitCheckTakePhotoButton"
  const val CHOOSE_GALLERY_BUTTON = "fitCheckGalleryButton"
  const val NEXT_BUTTON = "fitCheckNextButton"
  const val ERROR_MESSAGE = "fitCheckErrorMessage"
  const val MISSING_PHOTO_WARNING = "fitCheckMissingPhotoWarning"
...
